# quant_mp

./: .gitignore  Makefile  analyze_quant_params.py  download_wikitext2.py  ds_zero1.json  ds_zero2.json  ds_zero3.json  dtype_experiment.sh  eval_all.sh  fine_tune_all.sh  parse_acc.py  parse_perplexity.sh  parse_results.py  pyproject.toml  requirements.txt  run_resnet_exp.sh
.github/workflows/: pytest.yml  ruff.yml
configs/: iterative_num_iters_llama3_8b.json  model_configs.json  model_configs_llama3_8b.json  quant_configs.json  quant_configs_lsq_analytic_init.json
exps/: eval_llm.py  gen_fig.py  gen_fig_exp_res.py  gen_fig_levels.py  gen_fig_snr.py  qat_config.py  qat_config_fp.py  qat_config_int.py  run_exp.py  run_exp_llm.py  run_exp_resnet.py  train_llm_fsdp.py
src/quant_mp/: QModules.py  config.py  data_gen.py  lsq.py  models.py  quantizer.py  train.py  utils.py
src/quant_mp/algs/: __init__.py  analytic.py  iterative.py  lsq.py  minmax.py  octav.py  template.py
src/quant_mp/datatypes/: __init__.py  float.py  int.py  nonuniform.py  template.py
test/: test_data_formats.py  test_float_cast.py  test_float_grid_points.py  test_linear.py  test_qconv.py  test_qlinear.py
tests/: test_analytic.py  test_data_formats.py  test_iterative.py  test_lsq.py  test_minmax.py  test_octav.py  test_qconv.py  test_qlinear.py
