[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_mp"
version = "0.1.0"
description = "Quant alg development"
requires-python = ">=3.10"
dependencies = [
    "blobfile>=3.0.0",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers[torch]",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]

[tool.pyright]
reportPrivateImportUsage = false
