[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_mp"
version = "0.1.0"
description = "Quant alg development"
requires-python = ">=3.10"
dependencies = [
    "blobfile>=3.0.0",
    "lm-eval>=0.4.8",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers[torch]",
]

[tool.basedpyright]
reportPrivateImportUsage = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownMemberType = false
reportAny = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
