[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_mp"
version = "0.1.0"
description = "Quant alg development"
requires-python = ">=3.12"
dependencies = [
    "blobfile==3.1.0",
    "lm-eval==0.4.9.2",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "pytest==9.0.1",
    "ruff==0.14.6",
    "scipy==1.16.3",
    "sentencepiece==0.2.1",
    "tiktoken==0.12.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers[torch]==4.57.3",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportMissingParameterType = false
reportPrivateImportUsage = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
